# CiteGuard-Desktop

./: .gitignore  SESSION.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
mcp/: package.json
scripts/: bundle-mcp.sh  fetch-binaries.sh  gen-icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  firebase.rs  history.rs  mod.rs  models.rs  settings.rs
src-tauri/src/mcp/: client.rs  protocol.rs
src-tauri/src/ollama/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/storage/: mod.rs
src/components/auth/: AuthScreen.tsx  VerifyEmailScreen.tsx
src/components/chat/: ChatWindow.tsx  ConversationList.tsx  MessageBubble.tsx  ToolCallCard.tsx
src/components/citations/: CitationSidebar.tsx  ExportMenu.tsx  VerificationBadge.tsx
src/components/settings/: SettingsPanel.tsx
src/components/setup/: FirstLaunchWizard.tsx  ModelDownloader.tsx
src/components/upgrade/: UpgradeModal.tsx
src/hooks/: useChat.ts  useModelManager.ts  useRetractionAlerts.ts
src/lib/: export-report.ts  file-processor.ts  firebase.ts  persistence.ts  tauri-bridge.ts
src/stores/: authStore.ts  chatStore.ts  citationLibraryStore.ts  modelStore.ts  themeStore.ts
tests/mcp/: verification.test.cjs
