[package]
name = "citeguard-desktop"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "citeguard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["image-png"] }
tauri-plugin-shell  = "2"
tauri-plugin-store  = "2"
tauri-plugin-http   = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
